fix: 로그인 시 서버 정보 API 중복 호출 수정